spacing fix?

--- a/portfolio/files/css/styles.css
+++ b/portfolio/files/css/styles.css
@@ -334,7 +334,7 @@ a{
 
 .resume-header img{
 	margin-top: 10px;
-	margin-right: 25px;
+	margin-left: -25px;
 	width: 45%;
 }
 
